# PearSim

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  PearSimulation.pro  README.md  camera.cpp  camera.h  camerainteractor.cpp  camerainteractor.h  datacontainer.h  datagrid.h  iinteractor.cpp  isimulation.cpp  isimulation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulationview.cpp  simulationview.h
actors/: emptyactor.cpp  emptyactor.h  grid.cpp  grid.h  gridbox.cpp  gridbox.h  iactor.cpp  iactor.h  mesh.cpp  rectangular.cpp  rectangular.h  sphere.cpp  sphere.h
interactors/: actorinteractor.h  camerainteractor.cpp  camerainteractor.h
loader/: wavefrontloader.cpp  wavefrontloader.h
properties/: ipropertytable.cpp  ipropertytable.h
renderer/: environment.cpp  environment.h  light.cpp  light.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h
sims/: blocksimulation.cpp  blocksimulation.h  isimulation.cpp  isimulation.h  poisson3d.cpp  poisson3d.h  springsimulation.cpp  springsimulation.h  watersimulation.cpp  watersimulation.h
src/: CMakeLists.txt  config.h.in  main.cpp
src/actors/: emptyactor.cpp  grid.cpp  grid.h  gridbox.cpp  iactor.cpp  iactor.h  mesh.h
src/interactors/: iinteractor.h
src/lib/: CMakeLists.txt  config.h.in  documentation.h
src/lib/actors/: emptyactor.h  grid.cpp  grid.h  gridbox.h  iactor.cpp  iactor.h  line2d.cpp  line2d.h  mesh.cpp  mesh.h  plot2d.cpp  plot2d.h  rectangular.cpp  rectangular.h  sphere.cpp  sphere.h
src/lib/data/: data.h  data_utils.h  datacontainer.h  datagrid.h
src/lib/interactors/: actorinteractor.cpp  actorinteractor.h  camerainteractor.cpp  camerainteractor.h  iinteractor.cpp  iinteractor.h
src/lib/loader/: meshloader.h  wavefrontloader.h
src/lib/math/interpolation/: newton.h
src/lib/plugin/: iplugin.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
src/lib/properties/: colorproperty.cpp  colorproperty.h  doubleproperty.cpp  doubleproperty.h  groupproperty.cpp  groupproperty.h  intproperty.cpp  intproperty.h  iproperty.cpp  iproperty.h  ipropertytable.h  propertytable.cpp  propertytable.h  selectionproperty.cpp  selectionproperty.h  textproperty.cpp  textproperty.h
src/lib/renderer/: camera.h  environment.cpp  environment.h  light.h  material.h  renderer.cpp  renderer.h  shader.h
src/lib/sims/: isimulation.cpp  isimulation.h
src/lib/utils/: colorbutton.cpp  colorbutton.h  gradient.h
src/loader/: meshloader.h  wavefrontloader.h
src/main/: CMakeLists.txt  main.cpp
src/main/ui/: mainwindow.ui
src/main/widgets/: mainwindow.cpp  mainwindow.h  propertyview.cpp  propertyview.h  simulationview.cpp  simulationview.h
src/plugins/: CMakeLists.txt
src/plugins/block/: CMakeLists.txt  blocksimulation.cpp  blocksimulation.h
src/plugins/poisson3d/: CMakeLists.txt  poisson3d.cpp  poisson3d.h
src/plugins/spring/: CMakeLists.txt  springsimulation.cpp  springsimulation.h
src/plugins/water/: CMakeLists.txt  watersimulation.cpp  watersimulation.h
src/renderer/: camera.h  material.cpp  renderer.cpp  renderer.h
src/sims/: blocksimulation.h  isimulation.h  poisson3d.cpp  poisson3d.h  springsimulation.cpp  springsimulation.h  watersimulation.h
src/utils/: gradient.cpp  gradient.h
src/widgets/: simulationview.h
tests/: CMakeLists.txt  data_test.cpp  gradient_test.cpp
utils/: actor.cpp  actor.h  gradient.h  gridbox.cpp  gridbox.h
